feat: improve layout

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
   <body class="body">
     <header class="header container">
       <div class="header-wrap">
-        <div class="header-title">Christmas store</div>
+        <div class="header-title">Christmas shop</div>
+        <p class="header-banner">Summer Sale: все по 4.99$ <span class="sun">🌞</span></p>
         <div class="header-search">
           <input type="search" class="search-input" id="search-input" placeholder="Какую игрушку хотите найти?" autofocus />
           <div class="toy-icon">
             <span class="toy-counter" id="toy-counter">0</span>
+            <img class="toy-basket" src="./icons/basket1.png" alt="basket" width="40" height="40" />
           </div>
         </div>
       </div>
@@ -63,7 +65,7 @@
                 </div>
               </div>
               <div class="number-of-copies">
-                <h3 class="h3-toys">Количество экземпляров</h3>
+                <h3 class="h3-toys">Количество экземпляров в наличии</h3>
                 <div class="slider-copies-cont" id="slider-copies-cont">
                   <div class="slider-copies-counter-start" id="slider-copies-counter-start">1</div>
                   <div class="slider-copies" id="slider-copies"></div>
@@ -71,7 +73,7 @@
                 </div>
               </div>
               <div class="year-of-purchase">
-                <h3 class="h3-toys">Год приобретения</h3>
+                <h3 class="h3-toys">Год выпуска</h3>
                 <div class="slider-year-cont" id="slider-year-cont">
                   <div class="slider-year-counter-start" id="slider-year-counter-start">1940</div>
                   <div class="slider-year" id="slider-year"></div>
@@ -107,7 +109,7 @@
               </div>
               <div class="favorites">
                 <div class="favorites-checkbox" id="favorites-checkbox"></div>
-                <p class="favorites-text">Только любимые</p>
+                <p class="favorites-text">Редкий товар</p>
               </div>
               <div class="setting-buttons">
                 <button class="reset-settings" id="reset-settings">Сброс фильтров</button>
@@ -128,7 +130,7 @@
         </div>
         <div class="rsschool-logo">
           <a class="rs-school-link" href="https://rs.school/js/" target="_blank">
-            <img class="footer-img" src="./svg/rss.svg" alt="rs logo" height="50" />
+            <img class="footer-img" src="./svg/rss.svg" alt="rs logo" height="30" />
           </a>
         </div>
       </div>
