feat: Improve layout for tablets

--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
               </select>
             </div>
             <div class="categories">
-              <h2 class="h2-toys">Категории</h2>
-              <h3 class="h3-toys">Форма</h3>
-              <div class="toy-forms">
+              <h2 class="h2-toys grid-1">Категории</h2>
+              <h3 class="h3-toys grid-2">Форма</h3>
+              <div class="toy-forms grid-3">
                 <div class="toy-form-item" id="bell-form">
                   <img src="./shapeToy/bell.png" alt="Колокольчик" />
                   <p class="toy-form-text">Колокольчик</p>
@@ -63,7 +63,7 @@
                   <p class="toy-form-text">Фигурка</p>
                 </div>
               </div>
-              <div class="number-of-copies">
+              <div class="number-of-copies grid-4">
                 <h3 class="h3-toys">Количество экземпляров в наличии</h3>
                 <div class="slider-copies-cont" id="slider-copies-cont">
                   <div class="slider-copies-counter-start" id="slider-copies-counter-start">1</div>
@@ -71,7 +71,7 @@
                   <div class="slider-copies-counter-end" id="slider-copies-counter-end">12</div>
                 </div>
               </div>
-              <div class="year-of-purchase">
+              <div class="year-of-purchase grid-5">
                 <h3 class="h3-toys">Год выпуска</h3>
                 <div class="slider-year-cont" id="slider-year-cont">
                   <div class="slider-year-counter-start" id="slider-year-counter-start">1940</div>
@@ -79,7 +79,7 @@
                   <div class="slider-year-counter-end" id="slider-year-counter-end">2020</div>
                 </div>
               </div>
-              <div class="toy-color">
+              <div class="toy-color grid-6">
                 <h3 class="h3-toys">Цвет</h3>
                 <div class="colors-cont">
                   <div class="color-item white" id="color-white"></div>
@@ -89,7 +89,7 @@
                   <div class="color-item green" id="color-green"></div>
                 </div>
               </div>
-              <div class="toy-size">
+              <div class="toy-size grid-7">
                 <h3 class="h3-toys">Размер</h3>
                 <div class="size-cont">
                   <div class="size-item">
@@ -106,11 +106,11 @@
                   </div>
                 </div>
               </div>
-              <div class="favorites">
+              <div class="favorites grid-8">
                 <div class="favorites-checkbox" id="favorites-checkbox"></div>
                 <p class="favorites-text">Редкий товар</p>
               </div>
-              <div class="setting-buttons">
+              <div class="setting-buttons grid-9">
                 <button class="reset-settings" id="reset-settings">Сброс фильтров</button>
               </div>
             </div>
