refactor: rewrite  card rendering function

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
               <select class="sort-select" name="sort" id="sort">
                 <option class="sort-option" value="sort-by-name-down">По названию от А до Я</option>
                 <option class="sort-option" value="sort-by-name-up">По названию от Я до А</option>
-                <option class="sort-option" value="sort-by-year-up">По году приобретения &#8593;</option>
-                <option class="sort-option" value="sort-by-year-down">По году приобретения &#8595;</option>
+                <option class="sort-option" value="sort-by-year-up">По году выпуска &#8593;</option>
+                <option class="sort-option" value="sort-by-year-down">По году выпуска &#8595;</option>
               </select>
             </div>
             <div class="categories">
