fix: add 'disabled' attribute for input

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                 <div class="slider-copies-cont" id="slider-copies-cont">
                   <input type="number" class="slider-copies-counter-start" id="slider-copies-counter-start" value="1" disabled />
                   <div class="slider-copies" id="slider-copies"></div>
-                  <input type="number" class="slider-copies-counter-end" id="slider-copies-counter-end" value="12" />
+                  <input type="number" class="slider-copies-counter-end" id="slider-copies-counter-end" value="12" disabled />
                 </div>
               </div>
               <div class="year-of-purchase grid-5">
