feat: start basket layout

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           <input type="search" class="search-input" id="search-input" placeholder="Какую игрушку хотите найти?" autofocus />
           <div class="toy-icon">
             <span class="toy-counter" id="toy-counter">0</span>
-            <img class="toy-basket" src="./icons/basket1.png" alt="basket" width="40" height="40" />
+            <img class="basket-button" id="basket-button" src="./icons/basket1.png" alt="basket" width="40" height="40" />
           </div>
         </div>
       </div>
@@ -131,5 +131,11 @@
         </div>
       </div>
     </footer>
+    <div class="overlay hide" id="overlay"></div>
+    <!-- <div class="basket-wrap" id="basket-wrap"> -->
+    <div class="basket-cont hide fade" id="basket-cont">
+      <button class="close-basket-button" id="close-basket-button">&#10060;</button>
+    </div>
+    <!-- </div> -->
   </body>
 </html>
