--- a/src/index.html
+++ b/src/index.html
@@ -131,9 +131,47 @@
         </div>
       </div>
     </footer>
-    <div class="overlay hide" id="overlay"></div>
+    <div class="overlay" id="overlay"></div>
     <!-- <div class="basket-wrap" id="basket-wrap"> -->
-    <div class="basket-cont hide fade" id="basket-cont">
+    <div class="basket-cont" id="basket-cont">
+      <form class="user-info" action="#">
+        <label class="user-info-label" for="phone"
+          >Введите номер телефона:
+          <input class="user-info-input" type="tel" id="phone" name="phone" placeholder="+375-xx-xxx-xx-xx" />
+        </label>
+        <label class="user-info-label" for="email"
+          >Введите почту: <sub style="color: red">*</sub>
+          <input class="user-info-input" type="email" id="email" placeholder="example@gmail.com" size="30" required />
+        </label>
+        <label class="user-info-label" for="address">
+          Введите адрес:
+          <input class="user-info-input" type="text" name="address" />
+        </label>
+        <label class="user-info-label" for="name">
+          Введите имя: <sub style="color: red">*</sub>
+          <input class="user-info-input" type="text" name="name" required />
+        </label>
+        <fieldset class="user-info-order-option">
+          <legend class="user-info-legend">Выберите вариант доставки:</legend>
+          <div>
+            <input type="radio" id="courier" name="order-type" value="courier" />
+            <label class="user-info-label-1" for="courier">Курьером (5$)</label>
+          </div>
+          <div>
+            <input type="radio" id="self" name="order-type" value="self" checked />
+            <label class="user-info-label-1" for="self">Самовывоз (бесплатно)</label>
+          </div>
+        </fieldset>
+        <div class="order-cont">
+          <label class="user-info-label-2" for="order-price">
+            Итого:
+            <input class="order-price" type="number" name="order-price" id="order-price" value="0" disabled />
+          </label>
+          <button class="order-submit" type="submit">Оформить заказ</button>
+        </div>
+      </form>
+      <hr class="hr" />
+      <div class="user-selected-items" id="user-selected-items"></div>
       <button class="close-basket-button" id="close-basket-button">&#10060;</button>
     </div>
     <!-- </div> -->
