--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,43 @@
         </div>
       </form>
       <hr class="hr" />
-      <div class="user-selected-items" id="user-selected-items"></div>
+      <div class="basket-item-desc">
+        <div>Наименование</div>
+        <div>Доступно</div>
+        <div>Количество</div>
+        <div>Стоимость</div>
+      </div>
+      <div class="user-selected-items" id="user-selected-items">
+        <div class="basket-item">
+          <img class="basket-item-img" src="./toys/11.png" alt="picture" width="40" height="40" />
+          <div class="basket-item-title">Зелёный шар с рисунком hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</div>
+          <div class="basket-item-in-stock">10</div>
+          <button class="basket-item-button" type="button">➖</button>
+          <div class="basket-item-count">1</div>
+          <button class="basket-item-button" type="button">➕</button>
+          <div class="basket-item-price">49.90$</div>
+        </div>
+
+        <div class="basket-item">
+          <img class="basket-item-img" src="./toys/2.png" alt="picture" width="40" height="40" />
+          <div class="basket-item-title">Зелёный шар с рисунком hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</div>
+          <div class="basket-item-in-stock">10</div>
+          <button class="basket-item-button" type="button">➖</button>
+          <div class="basket-item-count">1</div>
+          <button class="basket-item-button" type="button">➕</button>
+          <div class="basket-item-price">49.90$</div>
+        </div>
+
+        <div class="basket-item">
+          <img class="basket-item-img" src="./toys/5.png" alt="picture" width="40" height="40" />
+          <div class="basket-item-title">Зелёный шар с рисунком hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</div>
+          <div class="basket-item-in-stock">10</div>
+          <button class="basket-item-button" type="button">➖</button>
+          <div class="basket-item-count">1</div>
+          <button class="basket-item-button" type="button">➕</button>
+          <div class="basket-item-price">49.90$</div>
+        </div>
+      </div>
       <button class="close-basket-button" id="close-basket-button">&#10060;</button>
     </div>
     <!-- </div> -->
