fix: change total input type

--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@
         <div class="order-cont">
           <label class="user-info-label-2" for="order-price">
             Итого:
-            <input class="order-price" type="number" name="order-price" id="order-price" value="0" disabled />
+            <input class="order-price" type="text" name="order-price" id="order-price" value="0" disabled />
           </label>
           <button class="order-submit" type="submit">Оформить заказ</button>
         </div>
