feat: basket ready

--- a/src/index.html
+++ b/src/index.html
@@ -131,9 +131,10 @@
         </div>
       </div>
     </footer>
-    <div class="overlay" id="overlay"></div>
-    <!-- <div class="basket-wrap" id="basket-wrap"> -->
-    <div class="basket-cont" id="basket-cont">
+
+    <div class="overlay hide" id="overlay"></div>
+
+    <div class="basket-cont hide fade" id="basket-cont">
       <form class="user-info" action="#">
         <label class="user-info-label" for="phone"
           >Введите номер телефона:
@@ -180,6 +181,5 @@
       <div class="user-selected-items" id="user-selected-items"></div>
       <button class="close-basket-button" id="close-basket-button">&#10060;</button>
     </div>
-    <!-- </div> -->
   </body>
 </html>
