feat: optimize images

--- a/src/index.html
+++ b/src/index.html
@@ -40,23 +40,23 @@
               <h3 class="h3-toys grid-2">Форма</h3>
               <div class="toy-forms grid-3">
                 <div class="toy-form-item" id="bell-form">
-                  <img src="./shapeToy/bell.png" alt="Колокольчик" />
+                  <img src="./shapeToy/bell.png" alt="Колокольчик" width="42" height="42" />
                   <p class="toy-form-text">Колокольчик</p>
                 </div>
                 <div class="toy-form-item" id="ball-form">
-                  <img src="./shapeToy/ball.png" alt="Шар" />
+                  <img src="./shapeToy/ball.png" alt="Шар" width="42" height="42" />
                   <p class="toy-form-text">Шар</p>
                 </div>
                 <div class="toy-form-item" id="pine-form">
-                  <img src="./shapeToy/pine.png" alt="Шишка" />
+                  <img src="./shapeToy/pine.png" alt="Шишка" width="42" height="42" />
                   <p class="toy-form-text">Шишка</p>
                 </div>
                 <div class="toy-form-item" id="snowflake-form">
-                  <img src="./shapeToy/snowflake.png" alt="Снежинка" />
+                  <img src="./shapeToy/snowflake.png" alt="Снежинка" width="42" height="42" />
                   <p class="toy-form-text">Снежинка</p>
                 </div>
                 <div class="toy-form-item" id="toy-form">
-                  <img src="./shapeToy/toy.png" alt="Фигурка" />
+                  <img src="./shapeToy/toy.png" alt="Фигурка" width="42" height="42" />
                   <p class="toy-form-text">Фигурка</p>
                 </div>
               </div>
@@ -126,7 +126,7 @@
         </div>
         <div class="rsschool-logo">
           <a class="rs-school-link" href="https://rs.school/js/" target="_blank">
-            <img class="footer-img" src="./svg/rss.svg" alt="rs logo" height="30" />
+            <img class="footer-img" src="./svg/rss.svg" alt="rs logo" width="81" height="30" />
           </a>
         </div>
       </div>
